--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Group 2 Project Proposal
+description: Feel free to bookmark this to keep an eye on our project updates
